# book_bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build_docker_image.yml  cargo-audit.yml  ci.yml  rust-clippy.yml
book_bot/: Cargo.toml
book_bot/src/: config.rs  handler_metrics.rs  main.rs
book_bot/src/bots/: mod.rs
book_bot/src/bots/approved_bot/: mod.rs  tools.rs
book_bot/src/bots/approved_bot/modules/annotations/: callback_data.rs  commands.rs  errors.rs  formatter.rs  mod.rs
book_bot/src/bots/approved_bot/modules/book/: callback_data.rs  commands.rs  mod.rs
book_bot/src/bots/approved_bot/modules/download/: archive.rs  callback_data.rs  commands.rs  file_send.rs  keyboards.rs  mod.rs
book_bot/src/bots/approved_bot/modules/help/: mod.rs
book_bot/src/bots/approved_bot/modules/random/: callback_data.rs  commands.rs  mod.rs
book_bot/src/bots/approved_bot/modules/search/: callback_data.rs  mod.rs  utils.rs
book_bot/src/bots/approved_bot/modules/settings/: callback_data.rs  keyboards.rs  mod.rs
book_bot/src/bots/approved_bot/modules/support/: mod.rs
book_bot/src/bots/approved_bot/modules/update_history/: callback_data.rs  mod.rs
book_bot/src/bots/approved_bot/modules/utils/: constants.rs  errors.rs  filter_command.rs  message_text.rs  mod.rs  pagination.rs  split_text.rs  telegram_utils.rs
book_bot/src/bots/approved_bot/services/: batch_downloader.rs  donation_notifications.rs  mod.rs  rate_limit.rs
book_bot/src/bots/approved_bot/services/book_cache/: mod.rs  types.rs
book_bot/src/bots/approved_bot/services/book_library/: formatters.rs  mod.rs  types.rs
book_bot/src/bots/approved_bot/services/user_settings/: mod.rs
book_bot/src/bots/bots_manager/: mod.rs
book_bot/src/bots/registration/: mod.rs  register.rs  strings.rs  utils.rs
book_bot/src/bots_manager/: axum_server.rs  bot_manager_client.rs  closable_sender.rs  custom_error_handler.rs  error_classification.rs  internal.rs  mod.rs  utils.rs
book_bot_macros/: Cargo.toml
book_bot_macros/src/: lib.rs
docker/: build.dockerfile
docs/superpowers/plans/: 2026-05-08-telegram-error-handling.md  2026-07-07-panic-safety.md  2026-07-07-security-webhook-secret-and-token-logging.md  2026-07-08-bots-manager-lifecycle-reliability.md  2026-07-08-ci-pipeline.md  2026-07-08-docker-image-hardening.md  2026-07-08-handler-metrics-macro-fix.md  2026-07-08-user-settings-caching-consistency.md  2026-07-09-callback-data-roundtrip-tests.md  2026-07-09-http-clients-unification.md  2026-07-09-ux-callback-feedback.md  2026-07-13-handlers-dedup-refactoring.md  2026-07-20-dependencies-and-project-hygiene.md  2026-07-20-observability-logging.md
docs/superpowers/specs/: 2026-05-08-telegram-error-handling-design.md  2026-07-07-security-webhook-secret-and-token-logging.md  2026-07-08-bots-manager-lifecycle-reliability-design.md  2026-07-08-handler-metrics-macro-fix.md  2026-07-09-http-clients-unification-design.md
scripts/: healthcheck.js  start.sh
src/: bots_manager.rs  config.rs  config.ts  main.rs  main.ts  sentry.ts
src/analytics/: users_counter.ts
src/bots/: manager.ts  mod.rs
src/bots/approved_bot/: mod.rs  tools.rs
src/bots/approved_bot/modules/: annotations.rs  book.rs  download.rs  help.rs  mod.rs  random.rs  search.rs  settings.rs  support.rs  update_history.rs  utils.rs
src/bots/approved_bot/modules/annotations/: callback_data.rs  commands.rs  errors.rs  formatter.rs  mod.rs
src/bots/approved_bot/modules/book/: callback_data.rs  commands.rs  (+1 more)
src/bots/approved_bot/services/: batch_downloader.rs  donation_notificatioins.rs  donation_notifications.rs  mod.rs
src/bots/bots_manager/: mod.rs  register.rs  strings.rs  utils.rs
src/bots/factory/: index.ts
src/bots/factory/bots/: blocked.ts  pending.ts
src/bots/limiter/: index.ts
src/bots/manager/: index.ts  types.ts  utils.ts
src/bots_manager/: axum_server.rs  bot_manager_client.rs  closable_sender.rs  custom_error_handler.rs  internal.rs  mod.rs  utils.rs
(+46 files in other folders)
