[package]
name = "book_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.21.3"

tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.14", features = ["compat"] }
tokio-stream = "0.1.17"
futures = "0.3.31"

axum = "0.8.3"
axum-prometheus = "0.8.0"

tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
sentry-tracing = "0.36.0"

reqwest = { version = "0.12.15", features = ["json", "stream"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

teloxide = { version = "0.15.0", features = ["macros", "webhooks-axum", "cache-me", "throttle"] }

url = "2.5.4"

ctrlc = { version = "3.4.5", features = ["termination"] }

strum = "0.27.1"
strum_macros = "0.27.1"

base64 = "0.22.1"
textwrap = "0.16.2"
regex = "1.11.1"
chrono = "0.4.40"
dateparser = "0.2.1"

smallvec = { version = "1.14.0", features = ["serde"] }
smartstring = { version = "1.0.1", features = ["serde"] }

moka = { version = "0.12.10", features = ["future"] }

sentry = { version = "0.36.0", features = ["debug-images"] }
